# jump-diffusion

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml  release.yml
src/: aggregates.rs  data.rs  jumps.rs  main.rs  math.rs  positions.rs  settings.rs
