[package]
name = "jump-diffusion"
version = "0.7.7"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
chrono-tz = "0.5.3"
config = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.15"
itertools = "0.10.0"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.1" }
position-intents = { git = "ssh://git@github.com/Overmuse/position-intents", tag = "v0.6.0" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.9.1", default-features = false, features = ["rest"] }
rdkafka = { version = "0.26.0", features = ["ssl-vendored"] }
rust_decimal = { version = "1.14.3", features = ["maths"] }
serde = "1.0.126"
serde_json = "1.0.64"
statrs = "0.13.0"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
