[package]
name = "jump-diffusion"
version = "0.9.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
config = "0.11"
datastore-client = { git = "ssh://git@github.com/Overmuse/datastore.git", tag = "v0.4.0" }
dotenv = "0.15"
futures = "0.3"
itertools = "0.10"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.1" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.11.1", default-features = false, features = ["rest"] }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
rust_decimal = { version = "1.14", features = ["maths"] }
serde = "1.0"
serde_json = "1.0"
statrs = "0.13"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = { git = "ssh://git@github.com/Overmuse/trading-base", tag = "v0.2.0" }
